--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,11 +3,13 @@ accompanist-permissions = "0.25.0"
 agp = "8.2.0-alpha16"
 hilt-android-compiler = "2.45"
 hilt-navigation-compose = "1.0.0"
+junit-jupiter-api = "5.9.3"
 kt-lint = "11.5.1"
 kotlin = "1.8.21"
 kotlin-ksp = "1.8.21-1.0.11"
 core-ktx = "1.10.1"
 junit = "4.13.2"
+junit5 = "1.9.3.0"
 androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
 appcompat = "1.6.1"
@@ -37,6 +39,9 @@ junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+junit-jupiter-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "junit-jupiter-api" }
+junit-jupiter-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit-jupiter-api" }
+junit-jupiter-params = { module = "org.junit.jupiter:junit-jupiter-params", version.ref = "junit-jupiter-api" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle-runtime-ktx" }
 activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
@@ -64,6 +69,7 @@ kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlinKapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 kotlinKsp = { id = "com.google.devtools.ksp", version.ref = "kotlin-ksp" }
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
-daggerHilt = {id = "com.google.dagger.hilt.android", version.ref = "dagger-hilt" }
+daggerHilt = { id = "com.google.dagger.hilt.android", version.ref = "dagger-hilt" }
 kotlinSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 ktLint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "kt-lint" }
+junit5 = { id = "de.mannodermaus.android-junit5", version.ref = "junit5" }
