--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ agp = "8.2.0-alpha16"
 hilt-android-compiler = "2.45"
 hilt-navigation-compose = "1.0.0"
 junit-jupiter-api = "5.9.3"
+kotlinx-coroutines-test = "1.6.4"
 kt-lint = "11.5.1"
 kotlin = "1.8.21"
 kotlin-ksp = "1.8.21-1.0.11"
@@ -21,6 +22,7 @@ compose-bom = "2023.08.00"
 kotlinx-serialization-json = "1.4.1"
 ktor-client = "2.2.2"
 ktor-client-serialization = "1.5.0"
+mockk = "1.13.7"
 play-services-location = "21.0.1"
 room-ktx = "2.5.2"
 timber = "5.0.1"
@@ -42,10 +44,12 @@ appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "a
 junit-jupiter-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "junit-jupiter-api" }
 junit-jupiter-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit-jupiter-api" }
 junit-jupiter-params = { module = "org.junit.jupiter:junit-jupiter-params", version.ref = "junit-jupiter-api" }
+kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinx-coroutines-test" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle-runtime-ktx" }
 activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
 compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose-bom" }
+mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
 play-services-location = { module = "com.google.android.gms:play-services-location", version.ref = "play-services-location" }
 timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
 ui = { group = "androidx.compose.ui", name = "ui" }
