--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.WeatherApp"
-        tools:targetApi="31" >
+        tools:targetApi="31">
 
         <activity
             android:name="chepsi.weather.presentation.activity.MainActivity"
@@ -27,6 +27,9 @@
 
         </activity>
 
+        <meta-data
+            android:name="WEATHER_API_ID"
+            android:value="${API_KEY}" />
     </application>
 
 </manifest>
